--- a/webservice/templates/show_campaigns_stats.html
+++ b/webservice/templates/show_campaigns_stats.html
@@ -51,7 +51,7 @@ Selected Campaign Stages{%include 'help_button.html'%}
             <tr>
             <!-- <td>{{c.experiment}}</td> -->
             <!-- c.experiment_obj.restricted: {{c.experiment_obj.restricted}} -->
-            <!-- current_experimenter.is_authorized(c.experiment): {{current_experimenter.is_authorized(c.experiment)}} -->
+            <!-- current_experimenter.is_authorized(c.experiment): {{current_experimenter}} -->
             <!-- c.experiment in current_experimenter.extra.selected {{c.experiment in current_experimenter.extra.selected}}-->
             <td> <a href="{{pomspath}}/campaign_info?campaign_id={{c.campaign_id}}">{{c.name}}</a></td>
             {% for k in column_heads  %}
