--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -256,38 +256,79 @@ $( document ).ready(function() {
          <h3>Actions</h3>
          <div class=menu>
               <div class=item>
-                <a href="{{pomspath}}/campaign_edit?jump_to_campaign={{Campaign.campaign_id}}"><i class="external edit icon" data-content="Edit Campaign" data-variation="basic"></i>Edit Campaign</a>
+                <a href="{{pomspath}}/campaign_edit?jump_to_campaign={{Campaign.campaign_id}}" {{"disabled" if (session_role=="analysis"
+                         and Campaign.creator!=current_experimenter.experimenter_id) or Campaign.experimenter_holder_obj}}>
+                <i class="external edit icon" data-content="Edit Campaign" data-variation="basic"></i>Edit Campaign</a>
                </div>
 
               <div class=item>
-                <a href="{{pomspath}}/launch_jobs?campaign_id={{Campaign.campaign_id}}"><i class="external rocket icon" data-content="Immediately Launch Submissions for Campaign" data-variation="basic"></i>Launch Campaign Jobs Now</a>
+                <a href="{{pomspath}}/launch_jobs?campaign_id={{Campaign.campaign_id}}" {{"disabled" if (session_role=="analysis" 
+                   and Campaign.creator!=current_experimenter.experimenter_id) or Campaign.experimenter_holder_obj}}
+                >
+                   <i class="external rocket icon" data-content="Immediately Launch Submissions for Campaign" data-variation="basic">
+                   </i>
+                  Launch Campaign Jobs Now
+               </a>
               </div>
-              <div class=item>
-                <a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign.campaign_id}}&act=kill"><i class="external trash icon" data-content="Kill running/idle jobs in Campaign" data-variation="basic"></i>Kill running/idle Jobs for Campaign</a>
-               </div>
-              <div class=item>
-                <a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign.campaign_id}}&act=hold"><i class="external pause icon" data-content="Hold running/idle jobs in Campaign" data-variation="basic"></i>Hold running/idle Jobs for Campaign</a>
-               </div>
 
               <div class=item>
-                <a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign.campaign_id}}"><i class="external play icon" data-content="Release held jobs in Campaign" data-variation="basic"></i>Release held  Jobs for Campaign</a>
-               </div>
-              <div class=item>
-              <a href="{{pomspath}}/schedule_launch?campaign_id={{Campaign.campaign_id}}">
-                 <i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic"></i>Schedule Future Job Launches
-              </a>
+                <a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign.campaign_id}}&act=kill" {{"disabled" if (session_role=="analysis"
+                         and Campaign.creator!=current_experimenter.experimenter_id) or Campaign.experimenter_holder_obj}}  
+                >
+                   <i class="external trash icon" data-content="Kill running/idle jobs in Campaign" data-variation="basic">
+                   </i>Kill running/idle Jobs for Campaign
+                </a>
               </div>
+
               <div class=item>
+                <a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign.campaign_id}}&act=hold" {{"disabled" if (session_role=="analysis"
+                         and Campaign.creator!=current_experimenter.experimenter_id) or Campaign.experimenter_holder_obj}}
+                >
+                   <i class="external pause icon" data-content="Hold running/idle jobs in Campaign" data-variation="basic">
+                   </i>Hold running/idle Jobs for Campaign
+               </a>
+              </div>
+
+              <div class=item>
+                 <a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign.campaign_id}}" {{"disabled" if (session_role=="analysis"
+                         and Campaign.creator!=current_experimenter.experimenter_id) or Campaign.experimenter_holder_obj}}
+                 >
+                    <i class="external play icon" data-content="Release held jobs in Campaign" data-variation="basic">
+                    </i>Release held  Jobs for Campaign
+                </a>
+              </div>
+
+              <div class=item>
+                 <a href="{{pomspath}}/schedule_launch?campaign_id={{Campaign.campaign_id}}" {{"disabled" if (session_role=="analysis"
+                         and Campaign.creator!=current_experimenter.experimenter_id) or Campaign.experimenter_holder_obj}}
+                 >
+                    <i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic">
+                    </i>Schedule Future Job Launches
+                 </a>
+            </div>
+              
+             <div class=item>
               {% if Campaign.active %}
-              <a href="{{pomspath}}/mark_campaign_active?campaign_id={{Campaign.campaign_id}}&is_active=False">
-                 <i class="external hide icon" data-content="Mark Campaign Inactive" data-variation="basic"></i>Mark Campaign Inactive
-              </a>
+                 <a href="{{pomspath}}/mark_campaign_active?campaign_id={{Campaign.campaign_id}}&is_active=False" {{"disabled" if (session_role=="analysis"
+                         and Campaign.creator!=current_experimenter.experimenter_id) or Campaign.experimenter_holder_obj}}
+                 >
+                    <i class="external hide icon" data-content="Mark Campaign Inactive" data-variation="basic">
+                   </i>Mark Campaign Inactive
+                 </a>
               {% else %}
-              <a href="{{pomspath}}/mark_campaign_active?campaign_id={{Campaign.campaign_id}}&is_active=True">
-                 <i class="external unhide icon" data-content="Mark Campaign Active" data-variation="basic"></i>Mark Campaign Active
-              </a>
+                  <a href="{{pomspath}}/mark_campaign_active?campaign_id={{Campaign.campaign_id}}&is_active=True" {{"disabled" if (session_role=="analysis"
+                         and Campaign.creator!=current_experimenter.experimenter_id) or Campaign.experimenter_holder_obj}}
+                  >
+                    <i class="external unhide icon" data-content="Mark Campaign Active" data-variation="basic">
+                    </i>Mark Campaign Active
+                  </a>
               {% endif %}
-              </div>
+             </div>
+             <style type="text/css">
+                     a[disabled] {
+                     pointer-events: none;
+                     }
+             </style>
           </div> <!-- class=menu -->
    </div>  <!-- class=ui segment raised -->
 
@@ -330,7 +371,9 @@ $( document ).ready(function() {
     <b>Dataset</b>: {{Campaign.dataset}}<br>
     <b>Software Version</b>: {{Campaign.software_version}}<br>
     <b>VO Role</b>: {{Campaign.vo_role}}<br>
+    {% if Campaign.param_overrides %}
     <b>Param Overrides</b>: [{% for pair in Campaign.param_overrides %} <br>&nbsp;&nbsp; {{pair}}  {% endfor %}] <br>
+    {% endif %}
     <b>cs_split_type</b>: {{Campaign.cs_split_type}}<br>
     <b>cs_split_dimensions</b>: {{Campaign.cs_split_dimensions}}<br>
     <b>cs_last_split</b>: {{Campaign.cs_last_split}} <a href="{{pomspath}}/reset_campaign_split?campaign_id={{Campaign.campaign_id}}"><button class="mini ui button"><i class="fast backward icon"></i>Reset</button></a><br>
