--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -78,7 +78,8 @@ Campaign Stages {{ show_hint('', 'Help page') }}
           <i class="large copy icon link blue icon" onclick="edit_campaign({{loop.index}},'CLONE');"></i>
           <i class="large trash link blue icon" onclick="delete_campaign('{{row.name}}',{{row.campaign_id}});"></i>
           {% else %}
-          <i class="large unhide link blue icon" onclick="edit_campaign({{loop.index}});">
+          <i class="large unhide link blue icon" onclick="edit_campaign({{loop.index}});"></i>
+          <i class="large copy icon link blue icon" onclick="edit_campaign({{loop.index}},'CLONE');"></i>
           {% endif %}
         </td>
         <td id="c_campaign_id_{{loop.index}}" style="display:none">{{row.campaign_id}}</td>
@@ -90,6 +91,7 @@ Campaign Stages {{ show_hint('', 'Help page') }}
        });
      </script>
      {% endif %}
+        <td id="c_authorized_{{loop.index}}" style="display:none">{{data.authorized[loop.index]}}</td>
         <td id="c_campaign_definition_id_{{loop.index}}" style="display:none">{{row.campaign_definition_id}}</td>
         <td id="c_launch_id_{{loop.index}}" style="display:none">{{row.launch_id}}</td>
         <td id="c_name_{{loop.index}}">{{row.name}}</td>
@@ -118,7 +120,7 @@ Campaign Stages {{ show_hint('', 'Help page') }}
     <tfoot>
         <tr>
             <th colspan="9">
-                <button class="ui labled teal icon button" onclick="add_campaign();return false;" {{ 'disabled' if (data.authorized==False) }}>
+                <button class="ui labled teal icon button" onclick="add_campaign();return false;">
                     <i class="icon add square"></i>
                     Add
                 </button>
@@ -293,9 +295,10 @@ Campaign Stages {{ show_hint('', 'Help page') }}
 
       <div class="actions">
         <div class="ui button deny red">Cancel</div>
-        <input type="submit" value="Submit" class="ui button teal" {{ 'disabled' if (data.authorized==False) }}/>
+        <!-- ae_submit can be disabled in edit_campaign function -->
+        <input id="ae_submit" name="ae_submit" type="submit" value="Submit" class="ui button teal" >
       {% if extra_edit_flag|default(False) %}
-         <input type="submit" name="{{extra_edit_flag}}" class="ui buttion orange" value="Launch Test">
+         <input type="submit" name="{{extra_edit_flag}}" class="ui button orange" value="Launch Test">
       {% endif %}
       </div>
 
@@ -333,7 +336,7 @@ Campaign Stages {{ show_hint('', 'Help page') }}
             <th colspan="3">
               <div class="actions">
                 <button class="ui button deny red">Cancel</button>
-                <button class="ui button approve teal" {{ 'disabled' if (data.authorized==False) }}>Accept</button>
+                <button id="ep_submit" class="ui button approve teal">Accept</button>
               </div>
             </th>
           </tr>
@@ -381,7 +384,7 @@ Campaign Stages {{ show_hint('', 'Help page') }}
             <th colspan="2">
               <div class="actions">
                 <button class="ui button deny red">Cancel</button>
-                <button class="ui button approve teal" {{ 'disabled' if (data.authorized==False) }}>Accept</button>
+                <button id="ed_submit" class="ui button approve teal">Accept</button>
               </div>
             </th>
           </tr>
@@ -691,6 +694,16 @@ function edit_campaign(index,clone) {
   $("#ae_completion_pct").val( $("#c_completion_pct_"+index).text() );
 
   $("#campaign_add_edit_modal").modal('show');
+
+  console.log("clone = : " + clone)
+  if ( typeof clone === 'undefined' )
+  {
+    console.log("I'm in")
+    if ( ($("#c_authorized_"+index).val() == false) ) {
+      $("#ae_submit").prop("disabled",true);
+    }
+  }
+
 }
 
 function add_campaign() {
