default to 1 for minutes, not * -- issue #18787

--- a/webservice/templates/schedule_launch.html
+++ b/webservice/templates/schedule_launch.html
@@ -23,7 +23,7 @@ POMS:Campaign Stage {{c.name}} Scheduled Launches
 
    <div class=field>
     <label>  Minutes(s) of the hour:</label>
-    <input type="text" name="minlist" value="{{job.minutes if job.minutes else '*'}}">
+    <input type="text" name="minlist" value="{{job.minutes if job.minutes else '1'}}">
   </div>
   <div class=field>
     <label>Hour(s) of day:</label>
